# gym-app-api

./: Cargo.toml  Dockerfile  docker-compose.yaml  sqlx-data.json
macros/: Cargo.toml
macros/src/: lib.rs
migrations/: 20230712231909_create-ad-key.down.sql  20230712231909_create-ad-key.up.sql
sql/ad/: create.sql  delete.sql  get_by_key.sql
src/: api.rs  env_vars.rs  errors.rs  lib.rs  main.rs  models.rs  services.rs
src/api/: form_request.rs  generate_key.rs  home.rs  mod.rs  validate_key.rs
templates/: index.html  key_failure.html  key_success.html
tests/: test_api.rs
