[package]
name = "gymapp-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
async-trait = "0.1.71"
axum = "0.6.18"
env_logger = "0.10.0"
envy = "0.4.2"
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.19"
serde = { version = "1.0.171", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "offline"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
